Updated version of the file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Psychic Letter Game</h1>
-    <h2 id="intro-question">Can you guess the letter i'm thinking about?</h2>
+    <h2 id="intro-question">Can you guess the letter I'm thinking about?</h2>
     <p id="inputText"></p>
     <p id="winsText"></p>
     <p id="losesText"></p>
